crates/ui/src/screens/save/snapshots/trpg_ui__screens__save__tests__slot_picker_snapshot.snap
---
source: crates/ui/src/screens/save/tests.rs
expression: h.snapshot()
---
                                                                                                    
  ┌─ Load Game ──────────────────────────────────────────────────────────────────────────────────┐  
  │                                                                                              │  
  │  Slot  Chapter                                           Mode      Army                Time  │  
  │                                                                                              │  
  │  01    Empty                                                                                 │  
  │  02    Test Chapter (cleared)                            Classic   2 units          1:02:05  │  
  │  03    Empty                                                                                 │  
  │  04    Test Chapter (cleared)                            Casual    1 unit           0:00:59  │  
  │  05    This save can't be read                                                               │  
  │  06    This save is from an incompatible version                                             │  
  │  07    Empty                                                                                 │  
  │  08    Empty                                                                                 │  
  │  09    Empty                                                                                 │  
  │  10    Empty                                                                                 │  
  │  11    Empty                                                                                 │  
  │  12    Empty                                                                                 │  
  │  13    Empty                                                                                 │  
  │  14    Empty                                                                                 │  
  │  15    Empty                                                                                 │  
  │  16    Empty                                                                                 │  
  │  17    Empty                                                                                 │  
  │  18    Empty                                                                                 │  
  │  19    Empty                                                                                 │  
  │  20    Empty                                                                                 │  
  │                                                                                              │  
  └───────────────────────────────────────────────────────────────────────────────── 1-20 of 30 ─┘  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                  arrows choose · f load · d back                                   
--- colours ---
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aabbcccccccccccbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaa
aabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddeeeeddeeeeeeedddddddddddddddddddddddddddddddddddddddddddeeeeddddddeeeeddddddddddddddddeeeeddbaa
aabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffbaa
aabddddddddgggggggggggggggggggggggdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddgggggggggggggggggggggggggggggggggggggggggdddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddeeeeedddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbeeeeeeeeeeeebbaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
--- legend ---
a = fg:text bg:black
b = fg:panel_border bg:panel_bg
c = fg:text_highlight bg:panel_bg
d = fg:text bg:panel_bg
e = fg:text_dim bg:panel_bg
f = fg:panel_bg bg:panel_border_focus
g = fg:hp_low bg:panel_bg
h = fg:text_dim bg:black
